force-app/main/default/objects/HourPlan__c/HourPlan__c.object-meta.xml
<CustomObject>
    <label>HourPlan</label>
    <nameField>
        <label>HourPlan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HourPlan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>