force-app/main/default/objects/HourPlan__c/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <label>Activity Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GN0035</fullName>
            </value>
            <value>
                <fullName>GN0919</fullName>
            </value>
            <value>
                <fullName>VL0947</fullName>
            </value>
            <value>
                <fullName>XL0A00</fullName>
            </value>
            <value>
                <fullName>XL0B00</fullName>
            </value>
            <value>
                <fullName>XL0D00</fullName>
            </value>
            <value>
                <fullName>GB0020</fullName>
            </value>
            <value>
                <fullName>VL0930</fullName>
            </value>
            <value>
                <fullName>XL0G00</fullName>
            </value>
            <value>
                <fullName>VL0942</fullName>
            </value>
            <value>
                <fullName>VL0101</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>