force-app/main/default/objects/HourPlan__c/fields/Activity_Desc__c.field-meta.xml
<CustomField>
    <fullName>Activity_Desc__c</fullName>
    <label>Activity Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>