force-app/main/default/objects/HourPlan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISS Contract Extension</fullName>
            </value>
            <value>
                <fullName>GENERAL INDIRECT OVERHEAD</fullName>
            </value>
            <value>
                <fullName>NON-CHARGEABLE OVERHEAD</fullName>
            </value>
            <value>
                <fullName>SIRA - Personal Injury</fullName>
            </value>
            <value>
                <fullName>COM - Generic - ANZ</fullName>
            </value>
            <value>
                <fullName>MediBank_Payment Integrit...</fullName>
            </value>
            <value>
                <fullName>Salesforce RIMS Implement...</fullName>
            </value>
            <value>
                <fullName>Invoice: December, 2021 (...</fullName>
            </value>
            <value>
                <fullName>AMS and Transformation Se...</fullName>
            </value>
            <value>
                <fullName>Minor Works Extension Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>