force-app/main/default/objects/HourPlan__c/fields/Hours_Label__c.field-meta.xml
<CustomField>
    <fullName>Hours_Label__c</fullName>
    <label>Hours Label</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>