force-app/main/default/objects/HourPlan__c/fields/OT_1__c.field-meta.xml
<CustomField>
    <fullName>OT_1__c</fullName>
    <label>OT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>