force-app/main/default/objects/HourPlan__c/fields/System_Src__c.field-meta.xml
<CustomField>
    <fullName>System_Src__c</fullName>
    <label>System Src</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>