force-app/main/default/objects/HourPlan__c/fields/WBS_Element__c.field-meta.xml
<CustomField>
    <fullName>WBS_Element__c</fullName>
    <label>WBS Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>