force-app/main/default/objects/HourPlan__c/fields/Wk_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Wk_End_Date__c</fullName>
    <label>Wk End Date</label>
    <type>Date</type>
</CustomField>