force-app/main/default/objects/HourPlan__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <label>Work Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMFQ3BGR</fullName>
            </value>
            <value>
                <fullName>CMFTQ8CI</fullName>
            </value>
            <value>
                <fullName>CMQ8DACS</fullName>
            </value>
            <value>
                <fullName>CMFTQ8IN</fullName>
            </value>
            <value>
                <fullName>CM1FLL2A</fullName>
            </value>
            <value>
                <fullName>CMFQ3BGM</fullName>
            </value>
            <value>
                <fullName>CMFTQ8MN</fullName>
            </value>
            <value>
                <fullName>CM1FSZR1</fullName>
            </value>
            <value>
                <fullName>CMFQ3BGI</fullName>
            </value>
            <value>
                <fullName>CM1FSMJ3</fullName>
            </value>
            <value>
                <fullName>NP__AWAY</fullName>
            </value>
            <value>
                <fullName>8AO01X58</fullName>
            </value>
            <value>
                <fullName>GBSUNBIL</fullName>
            </value>
            <value>
                <fullName>8DC05WFV</fullName>
            </value>
            <value>
                <fullName>CMFTQ8SR</fullName>
            </value>
            <value>
                <fullName>CM3BGADS</fullName>
            </value>
            <value>
                <fullName>8AC01XFC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>