force-app/main/default/objects/HourPlan__c/fields/Work_Item_Title__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Title__c</fullName>
    <label>Work Item Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DS GenApps enhancements</fullName>
            </value>
            <value>
                <fullName>GenApps Incidents</fullName>
            </value>
            <value>
                <fullName>SIRA Pesonal Injury</fullName>
            </value>
            <value>
                <fullName>GBS-ONLY UNBILLED</fullName>
            </value>
            <value>
                <fullName>Incidents</fullName>
            </value>
            <value>
                <fullName>Continuous Improvement Initiatives</fullName>
            </value>
            <value>
                <fullName>BAU ARC</fullName>
            </value>
            <value>
                <fullName>Invoice: December, 2021 (...</fullName>
            </value>
            <value>
                <fullName>Requests</fullName>
            </value>
            <value>
                <fullName>GenApps Requests</fullName>
            </value>
            <value>
                <fullName>GenApps Other Activities (Maintenance)</fullName>
            </value>
            <value>
                <fullName>Other Activities (Maintenance)</fullName>
            </value>
            <value>
                <fullName>GenApps Customer System Digital enhancements</fullName>
            </value>
            <value>
                <fullName>COM - Generic - ANZ</fullName>
            </value>
            <value>
                <fullName>MediBank_Payment Integrit...</fullName>
            </value>
            <value>
                <fullName>Time Out of the Office (TIMEAWAY)</fullName>
            </value>
            <value>
                <fullName>Salesforce RIMS Implementation Build Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>