force-app/main/default/objects/HourPlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Work_Item__c</columns>
    <columns>Work_Item_Title__c</columns>
    <columns>Activity_Code__c</columns>
    <columns>Activity_Desc__c</columns>
    <columns>OT__c</columns>
    <columns>Hours_Label__c</columns>
    <columns>Wk_End_Date__c</columns>
    <columns>OT_1__c</columns>
    <columns>WBS_Element__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>